dev/prospectio-chatbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prospectio-chatbot
  labels:
    app: prospectio-chatbot
spec:
  nodeSelector:
    light: "false"
  replicas: 1
  selector:
    matchLabels:
      app: prospectio-chatbot
  template:
    metadata:
      labels:
        app: prospectio-chatbot
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      containers:
        - name: prospectio-chatbot
          image: kaiohz/prospectio-chatbot:latest
          ports:
            - containerPort: 7002
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
